--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
                         8
                     </div>
                     <div class="divWhite col-md-1" id="a8">
-                        <img src="images/Rook%20black.png" id="RB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackRook(this)">
+                        <img src="images/Rook%20Black.png" id="RB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackRook(this)">
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="b8">
-                        <img src="images/Knight%20black.png" id="KNB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackKnight(this)">
+                        <img src="images/Knight%20Black.png" id="KNB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackKnight(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="c8">
-                        <img src="images/Bishope%20black.png" id="BB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackBishop(this)">
+                        <img src="images/Bishope%20Black.png" id="BB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackBishop(this)">
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="d8">
-                        <img src="images/Queen%20black.png" id="QB" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackQueen(this)">
+                        <img src="images/Queen%20Black.png" id="QB" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackQueen(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="e8">
@@ -87,15 +87,15 @@
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="f8">
-                        <img src="images/Bishope%20black.png" id="BB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackBishop(this)">
+                        <img src="images/Bishope%20Black.png" id="BB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackBishop(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="g8">
-                        <img src="images/Knight%20black.png" id="KNB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackKnight(this)">
+                        <img src="images/Knight%20Black.png" id="KNB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackKnight(this)">
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="h8">
-                        <img src="images/Rook%20black.png" id="RB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackRook(this)">
+                        <img src="images/Rook%20Black.png" id="RB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickBlackRook(this)">
                     </div>
                 </div>
                 <div class="row">
@@ -104,35 +104,35 @@
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="a7">
-                        <img src="images/Pawn%20black.png" id="PB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB1" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="b7">
-                        <img src="images/Pawn%20black.png" id="PB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB2" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="c7">
-                        <img src="images/Pawn%20black.png" id="PB3" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB3" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="d7">
-                        <img src="images/Pawn%20black.png" id="PB4" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB4" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="e7">
-                        <img src="images/Pawn%20black.png" id="PB5" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB5" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="f7">
-                        <img src="images/Pawn%20black.png" id="PB6" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB6" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divBlack col-md-1 text-center" id="g7">
-                        <img src="images/Pawn%20black.png" id="PB7" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB7" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
 
                     <div class="divWhite col-md-1" id="h7">
-                        <img src="images/Pawn%20black.png" id="PB8" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
+                        <img src="images/Pawn%20Black.png" id="PB8" class="chessIcons" draggable="true" ondragstart="drag(event)" onclick="clickPawn(this)">
                     </div>
                 </div>
 
